--- a/src/app/component/NotificationList/NotificationList.style.scss
+++ b/src/app/component/NotificationList/NotificationList.style.scss
@@ -11,7 +11,7 @@
 
 .NotificationList {
     position: fixed;
-    z-index: 100;
+    z-index: 400;
     top: 30px;
     right: 30px;
     max-width: 550px;
